force-app/main/default/objects/RH_Invoice_Item__c/RH_Invoice_Item__c.object-meta.xml
<CustomObject>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>INVOICE-ITEM{0000}</displayFormat>
        <label>Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>