force-app/main/default/objects/RH_Invoice_Item__c/fields/RH_Amount__c.field-meta.xml
<CustomField>
    <fullName>RH_Amount__c</fullName>
    <label>RH Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>