force-app/main/default/objects/RH_Invoice_Item__c/fields/RH_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>RH_Currency_Code__c</fullName>
    <label>Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XAF</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
                <default>true</default>
                <label>EUR</label>
            </value>
            <value>
                <fullName>US$</fullName>
                <isActive>false</isActive>
                <label>US$</label>
            </value>
            <value>
                <fullName>€</fullName>
                <isActive>false</isActive>
                <label>€</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>