force-app/main/default/objects/RH_Invoice_Item__c/fields/RH_Currency_Symbol__c.field-meta.xml
<CustomField>
    <fullName>RH_Currency_Symbol__c</fullName>
    <formula>CASE(RH_InvoiceId__r.RH_Currency_Code__c,
&quot;XAF&quot;, &quot;FCFA&quot;,
&quot;EUR&quot;, &quot;€&quot;,
&quot;USD&quot;, &quot;US$&quot;,
&quot;?&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RH_Currency_Symbol</label>
    <type>Text</type>
</CustomField>