force-app/main/default/objects/RH_Invoice_Item__c/fields/RH_description_fields__c.field-meta.xml
<CustomField>
    <fullName>RH_description_fields__c</fullName>
    <label>description Fields</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RH_ProjectId__c</fullName>
                <label>Project Name</label>
            </value>
            <value>
                <fullName>RH_Ressource__c</fullName>
                <label>Resource Name</label>
            </value>
            <value>
                <fullName>RH_Subject__c</fullName>
                <label>Subject</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>