force-app/main/default/objects/RH_Invoice_Item__c/fields/RH_EndDate__c.field-meta.xml
<CustomField>
    <fullName>RH_EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>