force-app/main/default/objects/RH_Invoice_Item__c/fields/RH_InvoiceId__c.field-meta.xml
<CustomField>
    <fullName>RH_InvoiceId__c</fullName>
    <label>Invoice</label>
    <referenceTo>RH_Invoice__c</referenceTo>
    <relationshipLabel>Invoices Items</relationshipLabel>
    <relationshipName>RH_Invoices_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>