force-app/main/default/objects/RH_Invoice_Item__c/fields/RH_ProjectId__c.field-meta.xml
<CustomField>
    <fullName>RH_ProjectId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Invoices Items</relationshipLabel>
    <relationshipName>RH_Invoices_Items</relationshipName>
    <type>Lookup</type>
</CustomField>