force-app/main/default/objects/RH_Invoice_Item__c/fields/RH_Rate__c.field-meta.xml
<CustomField>
    <fullName>RH_Rate__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>