force-app/main/default/objects/RH_Invoice_Item__c/fields/RH_Ressource__c.field-meta.xml
<CustomField>
    <fullName>RH_Ressource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ressource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices Items</relationshipLabel>
    <relationshipName>RH_Invoices_Items</relationshipName>
    <type>Lookup</type>
</CustomField>