force-app/main/default/objects/RH_Invoice_Item__c/fields/RH_StartDate__c.field-meta.xml
<CustomField>
    <fullName>RH_StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>