force-app/main/default/objects/RH_Invoice_Item__c/fields/RH_Subject__c.field-meta.xml
<CustomField>
    <fullName>RH_Subject__c</fullName>
    <label>Subject</label>
    <length>50</length>
    <type>Text</type>
</CustomField>