force-app/main/default/objects/RH_Invoice_Item__c/fields/RH_Title__c.field-meta.xml
<CustomField>
    <fullName>RH_Title__c</fullName>
    <formula>(IF(INCLUDES( RH_description_fields__c , &apos;RH_ProjectId__c&apos;),  RH_ProjectId__r.Name +&apos; &apos;, &apos;&apos;)+
IF(INCLUDES( RH_description_fields__c , &apos;RH_Ressource__c&apos;),  RH_Ressource__r.LastName +&apos; &apos;+RH_Ressource__r.FirstName +&apos; &apos; , &apos;&apos;) +
IF(INCLUDES( RH_description_fields__c , &apos;RH_Subject__c&apos;), RH_Subject__c +&apos; &apos; , &apos;&apos;))</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>